# table-talks

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPLOY.md  Dockerfile  LICENSE  Makefile  TODO.md  docker-compose.example.yml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: cd.yml  ci.yml  release.yml
data/: questions.csv  themes.csv
scripts/: csv_to_sheets.py
src/: __init__.py  bot.py  data_loader.py  health.py  index.py  version.py
src/bot/: __init__.py  app.py  auth.py  constants.py  handlers.py  keyboards.py  rate_limit.py  session.py
src/data_sources/: __init__.py  base.py  csv_source.py  factory.py  sheets_source.py
tests/: __init__.py  test_data_loader.py  test_sheets_integration.py  test_validation.py
