[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src"]

[project]
name = "table-talks"
version = "1.4.0"
description = "Telegram bot for table-talk conversation cards by theme"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-telegram-bot>=21.0",
    "python-dotenv>=1.0.0",
    "gspread>=6.0.0",
    "google-auth>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8"]
release = ["python-semantic-release>=10.0.0,<11.0.0"]

[dependency-groups]
dev = ["basedpyright>=1.35", "pre-commit>=4.0", "pytest>=8.0", "ruff>=0.8"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

# Basedpyright config (replaces pyright for better compatibility)
[tool.basedpyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
# Suppress warnings for external library type stubs and mocks
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportMissingParameterType = false
reportPrivateUsage = false

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
build_command = "echo 'No build needed'"
commit_message = "chore(release): {version}\n\nAutomatically generated by python-semantic-release"
commit_author = "tanjd <42729752+tanjd@users.noreply.github.com>"
tag_format = "v{version}"

[tool.semantic_release.remote]
name = "origin"
type = "github"

[tool.semantic_release.changelog]
exclude_commit_patterns = []

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
